<resources>
    <string name="app_name">婚姻建議</string>
    <string name="sex">性別</string>
    <string name="edtSex">(輸入性別)</string>
    <string name="age">年齡</string>
    <string name="edtAge">年齡</string>
    <string name="btnOK">確定</string>
    <string name="txtR">建議:</string>
    <string name="suggestion">建議:</string>
    <string name="sug_not_hurry">還不急</string>
    <string name="sug_get_married">快找對象</string>
    <string name="sug_find_couple">開始找對象</string>
    <string name="sex_male">男</string>
    <string name="sex_female">女</string>
    <string-array name="sex_list1">
        <item>男</item>
        <item>女</item>
    </string-array>
    <string name="spn_sex_list_prompt">請選擇性別</string>
    <string name="male_age_range1">小於28歲</string>
    <string name="male_age_range2">28~33歲</string>
    <string name="male_age_range3">大於33歲</string>
    <string name="female_age_range1">小於25歲</string>
    <string name="female_age_range2">=25~30歲</string>
    <string name="female_age_range3">大於30歲</string>
</resources>
