<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.bluedream.myfirstapp.MainActivity">
    ;

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="性別"
        android:textSize="25sp" />

    <RadioGroup
        android:id="@+id/radGrpSex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkedButton="@+id/radBtnMale"
        android:orientation="vertical">


        <RadioButton
            android:id="@+id/radBtnMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sex_male" />

        <RadioButton
            android:id="@+id/radBtnFemale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sex_female" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/age"
        android:textSize="25sp"/>

    <RadioGroup
        android:id="@+id/radGrpAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkedButton="@+id/radBtnAgeRange1"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/radBtnAgeRange1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male_age_range1"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radBtnAgeRange2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male_age_range2"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radBtnAgeRange3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male_age_range3"
            android:textSize="18sp" />

    </RadioGroup>

    <Button
        android:id="@+id/btnOK"
        android:layout_width="132dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/btnOK" />

    <TextView
        android:id="@+id/txtR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtR"
        android:textSize="30sp" />

</LinearLayout>
